add cashed for task styles and templates

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "*",
     "gulp": "*",
     "gulp-babel": "*",
+    "gulp-cached": "^1.1.1",
     "gulp-clean-css": "*",
     "gulp-embed-svg": "*",
     "gulp-group-css-media-queries": "*",
@@ -28,11 +29,13 @@
     "gulp-notify": "*",
     "gulp-nunjucks-render": "*",
     "gulp-postcss": "*",
+    "gulp-remember": "^1.0.1",
     "gulp-responsive": "*",
     "gulp-sass": "*",
     "gulp-tinypng-compress": "*",
     "gulp-uglifyjs": "*",
     "gulp-useref": "*",
+    "path": "^0.12.7",
     "postcss-animation": "*",
     "postcss-font-magician": "*",
     "postcss-short": "*"
