--- a/package.json
+++ b/package.json
@@ -11,36 +11,40 @@
   ],
   "author": "Ivan Kuzmichev",
   "license": "ISC",
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ],
   "devDependencies": {
-    "@babel/core": "*",
-    "@babel/preset-env": "*",
-    "autoprefixer": "*",
+    "@babel/core": "7.5",
+    "@babel/preset-env": "7.5",
+    "autoprefixer": "9.6",
     "babel-loader": "^8.0.6",
-    "browser-sync": "*",
-    "critical": "*",
-    "del": "*",
-    "gulp": "*",
-    "gulp-babel": "*",
+    "browser-sync": "2.26",
+    "critical": "1.3",
+    "del": "5.1",
+    "gulp": "^4.0.2",
+    "gulp-babel": "8.0",
     "gulp-cached": "^1.1.1",
-    "gulp-clean-css": "*",
-    "gulp-embed-svg": "*",
-    "gulp-group-css-media-queries": "*",
-    "gulp-htmlmin": "*",
-    "gulp-imagemin": "*",
+    "gulp-clean-css": "4",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-htmlmin": "5",
+    "gulp-imagemin": "6",
     "gulp-newer": "^1.4.0",
-    "gulp-notify": "*",
-    "gulp-nunjucks-render": "*",
-    "gulp-postcss": "*",
+    "gulp-notify": "3",
+    "gulp-nunjucks-render": "2",
+    "gulp-postcss": "8",
     "gulp-remember": "^1.0.1",
-    "gulp-responsive": "*",
-    "gulp-sass": "*",
-    "gulp-tinypng-compress": "*",
-    "gulp-uglifyjs": "*",
-    "gulp-useref": "*",
+    "gulp-responsive": "2",
+    "gulp-sass": "^4.0.2",
+    "gulp-useref": "3",
+    "node-sass": "^4.12.0",
     "path": "^0.12.7",
-    "postcss-animation": "*",
-    "postcss-font-magician": "*",
-    "postcss-short": "*",
+    "postcss-animation": "0.0.12",
+    "postcss-font-magician": "2",
+    "postcss-short": "5",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.39.2",
     "webpack-stream": "^5.2.1"
