--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "autoprefixer": "9.6",
     "babel-loader": "^8.0.6",
     "browser-sync": "2.26",
-    "critical": "1.3",
     "del": "5.1",
+    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
-    "gulp-babel": "8.0",
     "gulp-cached": "^1.1.1",
     "gulp-clean-css": "4",
+    "gulp-favicons": "^2.3.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "5",
     "gulp-imagemin": "6",
@@ -39,6 +39,7 @@
     "gulp-postcss": "8",
     "gulp-remember": "^1.0.1",
     "gulp-sass": "^4.0.2",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
