add task build images

--- a/package.json
+++ b/package.json
@@ -38,11 +38,18 @@
     "gulp-nunjucks-render": "2",
     "gulp-postcss": "8",
     "gulp-remember": "^1.0.1",
+    "gulp-responsive": "^2.14.0",
+    "gulp-responsive-config": "^1.1.0",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-webp": "^4.0.1",
+    "imagemin-gifsicle": "^6.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webp": "^5.1.0",
+    "merge2": "^1.2.4",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss-animation": "0.0.12",
