--- a/package.json
+++ b/package.json
@@ -20,29 +20,37 @@
   "devDependencies": {
     "@babel/core": "7.5",
     "@babel/preset-env": "7.5",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "9.6",
     "babel-loader": "^8.0.6",
     "browser-sync": "2.26",
-    "del": "5.1",
+    "css-mqpacker": "^7.0.0",
+    "del": "^5.1.0",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
-    "gulp-clean-css": "4",
+    "gulp-clean-css": "^4.2.0",
     "gulp-favicons": "^2.3.1",
+    "gulp-fontgen": "^0.2.5",
     "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-htmlmin": "5",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "6",
     "gulp-load-plugins": "^2.0.1",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "3",
     "gulp-nunjucks-render": "2",
     "gulp-postcss": "8",
+    "gulp-purgecss": "^1.2.0",
     "gulp-remember": "^1.0.1",
     "gulp-responsive": "^2.14.0",
     "gulp-responsive-config": "^1.1.0",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^3.0.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "gulp-webfont": "^0.0.1-4",
     "gulp-webp": "^4.0.1",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
@@ -54,8 +62,16 @@
     "path": "^0.12.7",
     "postcss-animation": "0.0.12",
     "postcss-font-magician": "2",
+    "postcss-purgecss": "^1.0.0",
     "postcss-short": "5",
+    "postcss-uncss": "^0.17.0",
+    "sort-css-media-queries": "^1.4.3",
+    "uncss": "^0.17.2",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^5.2.1"
+  },
+  "dependencies": {
+    "fontfacegen": "^0.3.1",
+    "map-stream": "^0.0.7"
   }
 }
