add embed svg and fix responsive emages generator

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-clean-css": "^4.2.0",
+    "gulp-embed-svg": "^1.1.5",
     "gulp-favicons": "^2.3.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
@@ -53,6 +54,7 @@
     "gulp-webp": "^4.0.1",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
+    "imagemin-pngquant": "^8.0.0",
     "imagemin-svgo": "^7.0.0",
     "imagemin-webp": "^5.1.0",
     "merge2": "^1.2.4",
