--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "9.6",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "0.3.1",
     "browser-sync": "2.26",
     "css-mqpacker": "^7.0.0",
     "del": "^5.1.0",
@@ -30,6 +31,7 @@
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-clean-css": "^4.2.0",
+    "gulp-dependents": "1.2.3",
     "gulp-embed-svg": "^1.1.5",
     "gulp-favicons": "^2.3.1",
     "gulp-fontmin": "^0.7.4",
@@ -68,6 +70,7 @@
     "postcss-short": "5",
     "postcss-uncss": "^0.17.0",
     "sort-css-media-queries": "^1.4.3",
+    "terser-webpack-plugin": "2.0.1",
     "uncss": "^0.17.2",
     "vinyl-named": "^1.1.0",
     "webpack-error-notification": "^0.1.8",
