--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   ],
   "devDependencies": {
     "autoprefixer": "9.6",
-    "babel-loader": "^8.0.6",
     "babel-minify-webpack-plugin": "0.3.1",
     "browser-sync": "2.26",
     "del": "^5.1.0",
     "fs": "0.0.2",
     "gulp": "^4.0.2",
+    "gulp-all": "^1.1.0",
     "gulp-cached": "^1.1.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-dependents": "1.2.3",
@@ -37,6 +37,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-notify": "3",
     "gulp-nunjucks-render": "2",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "8",
     "gulp-purgecss": "^1.2.0",
     "gulp-remember": "^1.0.1",
@@ -46,6 +47,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^3.0.0",
+    "gulp-watch": "^5.0.1",
     "gulp-webp": "^4.0.1",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
