--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
     "webpack-notifier": "^1.8.0",
     "webpack-stream": "^5.2.1",
     "yargs-interactive": "^3.0.0"
+  },
+  "dependencies": {
+    "ts-loader": "^6.1.2",
+    "typescript": "^3.6.3"
   }
 }
