add ts to project

--- a/package.json
+++ b/package.json
@@ -61,11 +61,9 @@
     "postcss-short": "5",
     "terser-webpack-plugin": "2.1.0",
     "vinyl-named": "^1.1.0",
-    "webpack-notifier": "^1.8.0",
     "webpack-stream": "^5.2.1",
-    "yargs-interactive": "^3.0.0"
-  },
-  "dependencies": {
+    "webpack-notifier": "^1.8.0",
+    "yargs-interactive": "^3.0.0",
     "ts-loader": "^6.1.2",
     "typescript": "^3.6.3"
   }
