--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "not dead"
   ],
   "devDependencies": {
-    "autoprefixer": "9.6",
+    "autoprefixer": "9.8",
     "babel-minify-webpack-plugin": "0.3.1",
     "browser-sync": "2.26",
     "del": "^5.1.0",
@@ -26,45 +26,45 @@
     "gulp": "^4.0.2",
     "gulp-all": "^1.1.0",
     "gulp-cached": "^1.1.1",
-    "gulp-clean-css": "^4.2.0",
-    "gulp-dependents": "1.2.3",
-    "gulp-embed-svg": "^1.1.5",
-    "gulp-favicons": "^2.3.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-dependents": "1.2.5",
+    "gulp-embed-svg": "^1.2.0",
+    "gulp-favicons": "^2.4.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "6",
-    "gulp-load-plugins": "^2.0.1",
+    "gulp-imagemin": "7",
+    "gulp-load-plugins": "^2.0.3",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "3",
     "gulp-nunjucks-render": "2",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "8",
-    "gulp-purgecss": "^1.2.0",
+    "gulp-purgecss": "^2.3.0",
     "gulp-remember": "^1.0.1",
-    "gulp-responsive": "^2.14.0",
+    "gulp-responsive": "^3.0.1",
     "gulp-responsive-config": "^1.1.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^3.0.0",
     "gulp-watch": "^5.0.1",
     "gulp-webp": "^4.0.1",
     "imagemin-gifsicle": "^6.0.1",
-    "imagemin-jpeg-recompress": "^6.0.0",
-    "imagemin-pngquant": "^8.0.0",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webp": "^5.1.0",
-    "merge2": "^1.3.0",
-    "node-sass": "^4.12.0",
+    "imagemin-jpeg-recompress": "^7.0.0",
+    "imagemin-pngquant": "^9.0.0",
+    "imagemin-svgo": "^8.0.0",
+    "imagemin-webp": "^6.0.0",
+    "merge2": "^1.4.1",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "postcss-animation": "0.0.12",
     "postcss-short": "5",
-    "terser-webpack-plugin": "2.1.3",
+    "terser-webpack-plugin": "3.0.6",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "vinyl-named": "^1.1.0",
-    "webpack-stream": "^5.2.1",
     "webpack-notifier": "^1.8.0",
-    "yargs-interactive": "^3.0.0",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.4"
+    "webpack-stream": "^5.2.1",
+    "yargs-interactive": "^3.0.0"
   }
 }
